# datasets

./: .editorconfig  .flake8  .gitignore  .kodiak.toml  .pre-commit-config.yaml  .releaserc.js  .rsync-filter  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: config.yml  labels.yml  release-drafter.yml  sync.yml
.github/PULL_REQUEST_TEMPLATE/: new_dataset.md  new_downstream_dataset.md
.github/workflows/: auto-merge.yml  continuous-integration.yml  continuous_integration.yml  dependabot-automation.yml  release-drafter.yml  release.yml  releases.yml  sync.yml  tests.yml
docs/: downloading-raw-data.md  how-to-add-a-new-dataset.md  how-to-add-a-new-downstream-dataset.md  how-to-add-a-new-pretraining-dataset.md  how-to-run-the-pipeline.md  how-to-use-the-dataset-db.md
src/: __init__.py
src/api/: storage.py
src/commands/: create_pretraining_instances.py  downloader.py  organise_all_datasets.py  split_dataset_instances.py
src/common/: __init__.py  logger.py  progress.py  settings.py
src/datamodels/: __init__.py  base_model.py  common.py  constants.py  dataset_metadata.py  instance.py  region.py  scene_graph.py  text.py  trajectory.py
src/datamodels/datasets/: __init__.py  alfred.py  coco.py  epic_kitchens.py  gqa.py  visual_genome.py
src/emma_datasets/: __init__.py  __main__.py  _version.py
src/emma_datasets/api/: storage.py
src/emma_datasets/augmentations/simbot_augmentators/: __init__.py  action_creators.py  base_augmentator.py  break_augmentator.py  clean_augmentator.py  clip_image_diversity.py  fill_augmentator.py  goto_augmentator.py  open_close_augmentator.py  pickup_augmentator.py  place_augmentator.py  scan_augmentator.py  search_augmentator.py  toggle_augmentator.py
src/emma_datasets/commands/: build_tokenizer.py  create_downstream_dbs.py  create_pretraining_instances.py  create_simbot_augmentations_from_vision_data.py  create_simbot_instructions_from_annotations.py  create_simbot_trajectories_from_dynamo_db.py  create_teach_edh_instances.py  decode_highlevel_key_and_generate.py  download_datasets.py  downloader.py  extract_annotations.py  organise_all_datasets.py  split_dataset_instances.py
src/emma_datasets/common/: __init__.py  downloader.py  logger.py  progress.py  settings.py
src/emma_datasets/common/helpers/: __init__.py  object_manipulation.py
src/emma_datasets/constants/: __init__.py  dataset_downloads.csv  simbot_low_level_actions_templates.json  vqa_v2_ans2label.json
src/emma_datasets/constants/simbot/: ObjectManifest.json  arena_definitions.json  asset_synonyms.json  asset_synonyms_emnlp.json  augmentations.json  augmentations_emnlp_train.json  augmentations_emnlp_valid.json  augmentations_full_train.json  augmentations_full_valid.json  class_thresholds2.json  high_level_templates.py  low_level_actions_templates.json  object_id_synonyms.json  object_id_to_class2.json  simbot.py
src/emma_datasets/constants/teach/: action_idx_to_action_name.json  action_to_action_idx.json
src/emma_datasets/datamodels/: __init__.py  annotations.py  base_model.py  common.py  constants.py  dataset_metadata.py  generics.py  instance.py  region.py  scene_graph.py  tasks.py  text.py  trajectory.py
src/emma_datasets/datamodels/datasets/: __init__.py  alfred.py  coco.py  conceptual_captions.py  ego4d.py  epic_kitchens.py  gqa.py  nlvr.py  refcoco.py  simbot.py  teach.py  vqa_v2.py  (+2 more)
src/emma_datasets/db/: __init__.py  dataset_db.py  storage.py
src/emma_datasets/io/: __init__.py  archive.py  csv.py  parquet.py  paths.py  txt.py
src/emma_datasets/parsers/: align_multiple_datasets.py  dataset_aligner.py
src/emma_datasets/pipeline/: __init__.py  downstream_db_creator.py  instance_creator.py  metadata_parser.py
src/io/: __init__.py  archive.py  json.py  paths.py
src/parsers/: align_multiple_datasets.py  dataset_aligner.py  structure_instances.py
src/parsers/dataset_metadata/: __init__.py  alfred.py  coco.py  epic_kitchens.py  gqa.py  metadata_parser.py  vg.py
src/parsers/helpers/: __init__.py  get_md5.py
src/parsers/instance_splitters/: __init__.py  alfred_captions.py  alfred_trajectories.py  coco_caption.py  epic_kitchens_captions.py  gqa_qa_pairs.py  gqa_scene_graphs.py  instance_splitter.py  vg_regions.py
src/pipeline/: __init__.py  instance_creator.py  metadata_parser.py
storage/: dataset_downloads.csv
storage/fixtures/: coco_captions.json  coco_captions_train.json  coco_captions_valid.json  epic_kitchens.csv  gqa_questions.json  gqa_scene_graph.json  nlvr.jsonl  region_descriptions.json  simbot_sticky_notes.json  vg_image_data.json  vg_regions.json
storage/fixtures/coco/: coco_captions_tiny.json  coco_dev_image_ids_tiny.npy  coco_restval_image_ids_tiny.npy  coco_test_image_ids_tiny.npy  coco_train_image_ids_tiny.npy
storage/fixtures/db/: instances.db
storage/fixtures/ego4d/: moments_val.json  nlq_val.json  vq_val.json
storage/fixtures/refcoco/: instances.json  refs(umd).p
storage/fixtures/simbot/: simbot.json  simbot_augmentation_images.json  simbot_sticky_notes.json
storage/fixtures/teach_edh/: divided_test_seen.txt  divided_test_unseen.txt  divided_val_seen.txt  divided_val_unseen.txt
storage/fixtures/vqa_v2/: v2_OpenEnded_mscoco_test2015_questions.json  v2_OpenEnded_mscoco_train2014_questions.json  v2_OpenEnded_mscoco_val2014_questions.json  v2_mscoco_train2014_annotations.json  v2_mscoco_val2014_annotations.json
tests/: conftest.py  test_annotation_extractors.py  test_dataset_aligner.py  test_downstream_db_creator.py  test_instance_creator.py  test_instance_splitters.py  test_instances_db.py  test_metadata_parsers.py  test_teach_datamodels.py
tests/commands/: test_create_downstream_dbs.py  test_create_teach_edh_instances.py
tests/datamodels/: test_coco_datamodels.py  test_constants.py  test_ego4d_datamodels.py  test_nlvr_datamodels.py  test_refcoco_datamodels.py  test_simbot_datamodels.py  test_teach_datamodels.py  test_vqa_v2_datamodels.py
tests/fixtures/: annotation_extrators.py  dataset_aligners.py  grouped_metadata.py  instance_splitters.py  instances_db.py  metadata_parsers.py  paths.py
(+95 files in other folders)
