[tool.poetry]
name = "emma-datasets"
version = "0.13.5"
description = ""
authors = [
	"Amit Parekh <amit.parekh@hw.ac.uk>",
	"Alessandro Suglia <alessandro.suglia@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/emma-simbot/datasets"

packages = [{ include = "emma_datasets", from = "src" }]

[tool.poe]
envfile = ".env"

	[tool.poe.tasks]

		[tool.poe.tasks.format]
		help = "Format using the pre-commit hooks"
		cmd = "pre-commit run --all-files"

		[tool.poe.tasks.typecheck]
		help = "Check types with mypy"
		cmd = "mypy ."

		[tool.poe.tasks.lint]
		help = "Lint with flake8"
		cmd = "flake8 ."

		[tool.poe.tasks.test]
		help = "Run the fast Python tests"
		cmd = "pytest --cov=src -m 'not slow'"

		[tool.poe.tasks.test-everything]
		help = "Run all the tests and get the coverage"
		cmd = "pytest -v --junitxml=pytest.xml --cov=src -m 'not slow and not multiprocessing'"

		[tool.poe.tasks.update-torch-cuda]
		## See https://github.com/python-poetry/poetry/issues/2543
		help = "Update torch to use the latest CUDA version"
		shell = "python scripts/update_torch_cuda.py"

		[tool.poe.tasks.outdated]
		help = 'Show all outdated top-level dependencies'
		shell = """
			poetry show --outdated | grep --file=<(poetry show --tree | grep '^\\w' | sed 's/^\\([^ ]*\\).*/^\\1\\\\s/')
		"""
		interpreter = "bash"


[tool.poetry.dependencies]
python = "^3.9"
pydantic = { extras = ["dotenv"], version = "^1.8.2" }
rich = "^12.2.0"
numpy = "^1.22.3"
orjson = "^3.6.7"
Pillow = "^9.1.0"
torch = { version = "^1.11.0", optional = true }
py7zr = "^0.18.3"
boto3 = "1.21.38"
overrides = "^6.1.0"


[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
flake8 = "^4.0"
mypy = "^0.942"
pytest = "^7.1.1"
ipykernel = "^6.13.0"
pre-commit = "^2.18.1"
poethepoet = "^0.13.1"
pytest-cov = "^3.0.0"
jupyterlab = "^3.3.3"
isort = "^5.10.1"
black = { extras = ["jupyter"], version = "^22.3" }
pytest-cases = "^3.6.11"
deepdiff = "^5.8.0"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2
line_length = 99
known_first_party = ["src", "emma_datasets"]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
